--- a/relatorio2.ipynb
+++ b/relatorio2.ipynb
@@ -1,8 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "96022a29",
+   "metadata": {},
+   "source": [
+    "## SEIM - Projeto prático de processamento de imagem 2024/2025\n",
+    "Gabriel Pinto (pg55943) e Bruno Martins (pg56211)\n",
+    "\n",
+    "\n",
+    "### - Montagem do suporte para obtenção de imagens\n",
+    "\n",
+    "{{{blah blah blah, foto do setup mítico que certamente vamos ter}}}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2cbb27e",
+   "metadata": {},
+   "source": [
+    "### 1. Aplicação do código  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "a83a0d95",
    "metadata": {},
    "outputs": [],
@@ -16,8 +38,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e17a62d",
+   "metadata": {},
+   "source": [
+    "## 1.1 Funções para visualização\n",
+    "\n",
+    "Para uma maior conveniência da visuakização passo-a-passo do processo de deteção, criamos algumas funções apenas para melhorar e tornar mais prático o processo de criação de figuras."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "0112184d",
    "metadata": {},
    "outputs": [],
@@ -50,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "01237823",
    "metadata": {},
    "outputs": [
@@ -93,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "8f26f4eb",
    "metadata": {},
    "outputs": [
